fix title image not showing , now corrected

--- a/styletwo.css
+++ b/styletwo.css
@@ -40,7 +40,7 @@ body {
 }
 
 #orlhead {
-    background: url(Photos/favicon2.jpg);
+    background: url(images/header-two.jpg);
     background-size: contain;
     height: 35px;
     width: 35px;
